--- a/MVC5_From_Scratch/S04_Separated_Solutions/Employee_Repo/Employee_Repo/Employee_Repo.csproj
+++ b/MVC5_From_Scratch/S04_Separated_Solutions/Employee_Repo/Employee_Repo/Employee_Repo.csproj
@@ -32,8 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Employee_Models">
-      <HintPath>..\..\Employee_Models\Employee_Models\bin\Debug\Employee_Models.dll</HintPath>
+    <Reference Include="Employee_Models, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Employee_Models\Employee_Models\bin\Release\Employee_Models.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
