--- a/MVC5_From_Scratch/S04_Separated_Solutions/Employee_Web/Employee_Web.Tests/Employee_Web.Tests.csproj
+++ b/MVC5_From_Scratch/S04_Separated_Solutions/Employee_Web/Employee_Web.Tests/Employee_Web.Tests.csproj
@@ -19,28 +19,26 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>bin\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x64</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>bin\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Employee_Models, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Employee_Repo\Employee_Repo\bin\Release\Employee_Models.dll</HintPath>
+    <Reference Include="Employee_Models">
+      <HintPath>..\..\Employee_Models\Employee_Models\bin\Employee_Models.dll</HintPath>
     </Reference>
-    <Reference Include="Employee_Repo, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Employee_Repo\Employee_Repo\bin\Release\Employee_Repo.dll</HintPath>
+    <Reference Include="Employee_Repo">
+      <HintPath>..\..\Employee_Repo\Employee_Repo\bin\Employee_Repo.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
