--- a/MVC5_From_Scratch/S04_Separated_Solutions/Employee_Models/Employee_Models/Employee_Models.nuspec
+++ b/MVC5_From_Scratch/S04_Separated_Solutions/Employee_Models/Employee_Models/Employee_Models.nuspec
@@ -4,8 +4,8 @@
         <id>$id$</id>
         <version>$version$</version>
         <title>$title$</title>
-        <authors>$authors$</authors>
-        <owners>$authors$</owners>
+        <authors>$author$</authors>
+        <owners>$author$</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>$description$</description>
         <copyright>Copyright &#0169; 2015, $author$</copyright>
