--- a/MVC5_From_Scratch/S04_Separated_Solutions/Employee_Repo/Employee_Repo/Employee_Repo.csproj
+++ b/MVC5_From_Scratch/S04_Separated_Solutions/Employee_Repo/Employee_Repo/Employee_Repo.csproj
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\</OutputPath>
+    <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -26,14 +26,14 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\</OutputPath>
+    <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Employee_Models, Version=2.3.0.49, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Employee_Models.2.3.0.49\lib\net45\Employee_Models.dll</HintPath>
+    <Reference Include="Employee_Models, Version=2.3.0.51, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Employee_Models.2.3.0.51\lib\net45\Employee_Models.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
