--- a/MVC5_From_Scratch/S04_Separated_Solutions/Employee_Web/Employee_Web/Employee_Web.csproj
+++ b/MVC5_From_Scratch/S04_Separated_Solutions/Employee_Web/Employee_Web/Employee_Web.csproj
@@ -45,13 +45,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Employee_Models, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Employee_Models\Employee_Models\bin\Employee_Models.dll</HintPath>
+    <Reference Include="Employee_Models, Version=2.3.0.54, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Employee_Models.2.3.0.54\lib\net45\Employee_Models.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Employee_Repo, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Employee_Repo\Employee_Repo\bin\Employee_Repo.dll</HintPath>
+    <Reference Include="Employee_Repo, Version=2.1.0.4, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Employee_Repo.2.1.0.4\lib\net45\Employee_Repo.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
