Remove NuGet packages, add Pre and Post build events to copy output into lib folder and use that for references

--- a/MVC5_From_Scratch/S04_Separated_Solutions/Employee_Models/Employee_Models/Employee_Models.csproj
+++ b/MVC5_From_Scratch/S04_Separated_Solutions/Employee_Models/Employee_Models/Employee_Models.csproj
@@ -47,6 +47,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>xcopy /i /s /e /y /r /f "$(TargetDir)\*" "$(SolutionDir)\lib\"</PostBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PreBuildEvent>rmdir /s /q "$(SolutionDir)\lib\"</PreBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
