--- a/MVC5_From_Scratch/S04_Separated_Solutions/Employee_Repo/Employee_Repo/Employee_Repo.csproj
+++ b/MVC5_From_Scratch/S04_Separated_Solutions/Employee_Repo/Employee_Repo/Employee_Repo.csproj
@@ -33,8 +33,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Employee_Models, Version=2.3.0.53, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Employee_Models.2.3.0.53\lib\net45\Employee_Models.dll</HintPath>
-      <Private>True</Private>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Employee_Models\lib\Employee_Models.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
@@ -71,6 +71,12 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>rmdir /s /q "$(SolutionDir)\lib\"</PreBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PostBuildEvent>xcopy /i /s /e /y /r /f "$(TargetDir)\*" "$(SolutionDir)\lib\"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
