--- a/MVC5_From_Scratch/S04_Separated_Solutions/Employee_Web/Employee_Web.Tests/Employee_Web.Tests.csproj
+++ b/MVC5_From_Scratch/S04_Separated_Solutions/Employee_Web/Employee_Web.Tests/Employee_Web.Tests.csproj
@@ -35,12 +35,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Employee_Models, Version=2.3.0.54, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Employee_Models.2.3.0.54\lib\net45\Employee_Models.dll</HintPath>
-      <Private>True</Private>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Employee_Models\lib\Employee_Models.dll</HintPath>
     </Reference>
     <Reference Include="Employee_Repo, Version=2.1.0.4, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Employee_Repo.2.1.0.4\lib\net45\Employee_Repo.dll</HintPath>
-      <Private>True</Private>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Employee_Repo\lib\Employee_Repo.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
