--- a/MVC5_From_Scratch/S04_Separated_Solutions/Employee_Web/Employee_Web/Employee_Web.csproj
+++ b/MVC5_From_Scratch/S04_Separated_Solutions/Employee_Web/Employee_Web/Employee_Web.csproj
@@ -46,12 +46,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Employee_Models, Version=2.3.0.54, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Employee_Models.2.3.0.54\lib\net45\Employee_Models.dll</HintPath>
-      <Private>True</Private>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Employee_Models\lib\Employee_Models.dll</HintPath>
     </Reference>
     <Reference Include="Employee_Repo, Version=2.1.0.4, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Employee_Repo.2.1.0.4\lib\net45\Employee_Repo.dll</HintPath>
-      <Private>True</Private>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Employee_Repo\lib\Employee_Repo.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
@@ -182,6 +182,12 @@
     <Error Condition="!Exists('..\packages\Microsoft.Net.Compilers.1.0.0\build\Microsoft.Net.Compilers.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Net.Compilers.1.0.0\build\Microsoft.Net.Compilers.props'))" />
     <Error Condition="!Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
   </Target>
+  <PropertyGroup>
+    <PreBuildEvent>rmdir /s /q "$(SolutionDir)\lib\"</PreBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PostBuildEvent>xcopy /i /s /e /y /r /f "$(TargetDir)\*" "$(SolutionDir)\lib\"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
