Adding Saved View

--- a/MVC5_From_Scratch/S06_Views/S06_L18_Views/S06_L18_Views/S06_L18_Views.csproj
+++ b/MVC5_From_Scratch/S06_Views/S06_L18_Views/S06_L18_Views/S06_L18_Views.csproj
@@ -132,6 +132,7 @@
     <Content Include="packages.config" />
     <Content Include="Views\Student\StudentDisplay.cshtml" />
     <Content Include="Views\Student\StudentAll.cshtml" />
+    <Content Include="Views\Student\Saved.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
