--- a/MVC5_From_Scratch/S06_Views/Models/Models/Models.csproj
+++ b/MVC5_From_Scratch/S06_Views/Models/Models/Models.csproj
@@ -40,6 +40,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Helpers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -80,8 +81,11 @@
   <ItemGroup>
     <Compile Include="Interfaces\IModel.cs" />
     <Compile Include="Interfaces\IStudent.cs" />
+    <Compile Include="Interfaces\ISubject.cs" />
+    <Compile Include="Models\Course.cs" />
     <Compile Include="Models\Model.cs" />
     <Compile Include="Models\Student.cs" />
+    <Compile Include="Models\Subject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
