--- a/MVC5_From_Scratch/S06_Views/S06_L18_Views/S06_L18_Views/Views/web.config
+++ b/MVC5_From_Scratch/S06_Views/S06_L18_Views/S06_L18_Views/Views/web.config
@@ -18,6 +18,7 @@
         <add namespace="System.Web.Routing" />
         <add namespace="S06_L18_Views" />
         <add namespace="Models.Interfaces"/>
+        <add namespace="S06_L18_Views.Helpers"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
