--- a/MVC5_From_Scratch/S06_Views/S06_L18_Views/S06_L18_Views/S06_L18_Views.csproj
+++ b/MVC5_From_Scratch/S06_Views/S06_L18_Views/S06_L18_Views/S06_L18_Views.csproj
@@ -137,6 +137,8 @@
     <Content Include="Views\Student\Saved.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\Course.cshtml" />
     <Content Include="Views\Subject\SubjectDisplay.cshtml" />
+    <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\_ViewStart.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
