--- a/MVC5_From_Scratch/S07_Filters/School.Web/School.Web/Views/web.config
+++ b/MVC5_From_Scratch/S07_Filters/School.Web/School.Web/Views/web.config
@@ -17,7 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="School.Web" />
-        <add namespace="Ces.Sch.Data.Interfaces" />
+        <add namespace="Ces.Sch.Models.Interfaces" />
         <add namespace="Telerik.Web.Mvc.UI"/>
       </namespaces>
     </pages>
